# jelly_graph

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/jelly_graph/: __init__.py
src/jelly_graph/classes/: codeql.py  jelly.py  trace.py
src/jelly_graph/find/: match.py  match_codeql.py  ql_function.py
src/jelly_graph/graph/: build_callgraph.py  plot.py  trace.py
src/jelly_graph/utils/: file_io.py
src/jelly_graph/weight/: mapping.py  weight.py
test/: test_callgraph.py  test_load_codeql.py  test_mapping.py  test_match_codeql.py  test_match_function.py  test_search_trace.py  test_visualization.py  test_weight.py
